--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,4 +1,6 @@
-@import url('normalize.css/normalize.css');
+@use 'normalize.css/normalize.css';
+@use 'variables.scss';
+@use 'grid.scss';
 
 *,
 *::before,
